25189 add an update test in dina repo rest it Make some tests more readable